kubernetes/backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: devboard
spec:
  selector:
    app: devboard-backend
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 8080
