kubernetes/postgres-service.yml
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: devboard
spec:
  clusterIP: None
  selector:
    app: devboard-postgres
  ports:
  - protocol: TCP
    port: 5432 
    targetPort: 5432
